# python_kafka_demo

./: .gitignore  01_producer.py  01_producer_continous.py  01_producer_simple.py  01a_producer_api_json.py  01a_producer_specificpartition.py  01b_producer_multipartition.py  01c_producer_batch.py  02_consumer.py  02_consumer_simple_autocommit.py  02a_consumer_manual_commit.py  02c_consumer_batch.py  config_template.yaml  kafka_config.py  pyproject.toml  readme.md
